--- a/index.html
+++ b/index.html
@@ -1,4 +1,10 @@
-<h1> <strong> Curso de Formação de Docentes do primeiro ano médio e normal</strong></h1>
+<!DOCTYPE html>
+<html lang="pt-br"
+   <head>
+   <meta charset="UTF-8">
+   <title><h1><strong> Curso de Formação de Docentes </strong></h1></title>
+       
+ <h1><strong> Curso de Formação de Docentes do primeiro ano médio e normal</strong></h1>
 <p> O curso de formaçaõ de docentes é um curso profinalisante que integra no corriculo, tem o objetivo de ensinar os alunos as metologias, e habilidades nesseçarias para a sala de aula, além de preparar os docentes para lidar com desafios dentro e fora de uma  sala de aula.</p>
 <p> <i>nesse curso temos também matérias especificas que nos ensinam todos os tipos de deficiencias, transtornos e como lidar com elas. </i> </p>
 <p>a importancia da formação de docentes para os professores é que desenvolve as habilidades dos professores para examinar o ensino sob a perspectiva dos aluno, que trazem diferentes experiencias e referencias a sala de aula</p>
