--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
-<html lang="pt-br"
+
+<html lang="pt-br">
+
+
    <head>
    <meta charset="UTF-8">
-   <title><h1><strong> Curso de Formação de Docentes </strong></h1></title>
+   <title><strong> Curso de Formação de Docentes </strong></title>
    </head>
        
  <h1><strong> Curso de Formação de Docentes do primeiro ano médio e normal</strong></h1>
